@@ -64,7 +64,6 @@ bool LuaConstCMD::PushEntries(lua_State* L)
 	PUSH_CMD(SETBASE);
 	PUSH_CMD(INTERNAL);
 	PUSH_CMD(SELFD);
-	PUSH_CMD(SET_WANTED_MAX_SPEED);
 	PUSH_CMD(LOAD_UNITS);
 	PUSH_CMD(LOAD_ONTO);
 	PUSH_CMD(UNLOAD_UNITS);
