@@ -33,9 +33,6 @@ public:
 
 	inline void SetOrderTarget(CUnit* o);
 
-	void SetScriptMaxSpeed(float speed, bool persistent);
-	void SlowUpdateMaxSpeed();
-
 	virtual void AddDeathDependence(CObject* o, DependenceType dep);
 	virtual void DeleteDeathDependence(CObject* o, DependenceType dep);
 	void AddCommandDependency(const Command& c);
